관리자 역할 부여 및 검색기능 추가

--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -29,7 +29,7 @@ td.board_content {
 	border-bottom: 1px solid #05445E;
 }
 
-td.board_content_end {
+td.board_content_end, th.board_content_end {
 	font-family: NanumGothic, Arial;
 	font-size: 20px;
 	background-color: #ffffff;
@@ -52,6 +52,7 @@ a.board_content:visited {
 	cursor: pointer;
 	color: #787878;
 }
+
 
 
 /* 툴팁 */
@@ -110,4 +111,30 @@ a.board_content:visited {
     visibility: visible;
     opacity: 1;
 }
+
+
+
+/* 검색 기능 관련 */
+.search_box {
+	border: 2px solid #3D550C;
+	width: 69%;
+	height: 28px;
+	font-family: NanumGothic;
+	font-size: 20px;
+	color: #000000;
+	padding: 5px;
+}
+
+.search_type {
+	border: 2px solid #3D550C;
+	width: 15%;
+	height: 40px;
+	font-family: NanumGothic;
+	font-size: 20px;
+	color: #000000;
+	padding: 5px;
+}
+
+
+
 
