content_box 색상 변경

--- a/src/main/resources/static/css/content.css
+++ b/src/main/resources/static/css/content.css
@@ -85,7 +85,7 @@ input.button:hover {
 
 td.content_box {
 	height: 400px;
-	background-color: #FDF5E6;
+	background-color: #F5F5F5;
 }
 
 textarea {
