--- a/src/main/resources/static/css/board.css
+++ b/src/main/resources/static/css/board.css
@@ -3,7 +3,7 @@
 th.board_item {
 	font-family: NanumGothic, Arial;
 	font-size: 20px;
-	background-color: #189AB4;
+	background-color: #9BC3FF;
 	border-left: 1px solid #05445E;
 	border-top: 1px solid #05445E;;
 	border-bottom: 1px solid #05445E;
@@ -13,7 +13,7 @@ th.board_item {
 th.board_item_end {
 	font-family: NanumGothic, Arial;
 	font-size: 20px;
-	background-color: #189AB4;
+	background-color: #9BC3FF;
 	border-left: 1px solid #05445E;
 	border-top: 1px solid #05445E;;
 	border-bottom: 1px solid #05445E;
