--- a/src/main/resources/static/css/content.css
+++ b/src/main/resources/static/css/content.css
@@ -61,25 +61,25 @@ input.input_box02 {
 }
 
 input.button {
-	border: 2px solid #3D550C;
+	border: 2px solid #7DA5E1;
 	width: 150px;
 	height: 40px;
 	font-family: NanumGothic;
 	font-size: 20px;
 	color: #ffffff;
 	padding: 5px;
-	background-color: #189AB4;
+	background-color: #9BC3FF;
 }
 
 input.button:hover {
-	border: 2px solid #3D550C;
+	border: 2px solid #7DA5E1;
 	width: 150px;
 	height: 40px;
 	font-family: NanumGothic;
 	font-size: 20px;
 	color: #ffffff;
 	padding: 5px;
-	background-color: #05445E;
+	background-color: #64AAFF;
 	cursor: pointer;
 }
 
