--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 tr.footer_line {
-	background-color: #05445E;
+	background-color: #64AAFF;
 	width:100%;
 	height: 40px;
 	text-align: center;
