header, footer 짤리는거 해결

--- a/src/main/resources/static/css/title.css
+++ b/src/main/resources/static/css/title.css
@@ -4,12 +4,18 @@ html, body {
 	margin: 0;
 	padding: 0;
 	height: 100%;
+	overflow: hidden; /* 스크롤바가 나타나지 않도록 설정 */
 }
 
 body {
     display: flex;
     flex-direction: column;
-    min-height: 100vh
+    min-height: 100vh;
+    overflow: auto; /* 내용이 넘칠 경우 스크롤 가능하도록 설정 */
+}
+
+header, footer {
+    flex-shrink: 0; /* header와 footer가 크기를 줄이지 않도록 설정 */
 }
 
 span.title_text01 {
@@ -50,5 +56,6 @@ td.img_box {
 
 .container {
     flex: 1; /* 나머지 공간을 채우도록 설정 */
+    overflow: auto; /* 내용이 넘칠 경우 스크롤 가능하도록 설정 */
 }
 
